# a2a_domain

./: .gitignore  LICENSE.txt  Makefile  README.md  pyproject.toml
a2a_domain/conversation/models/: __init__.py  context_model.py  data_content_model.py  data_message_model.py  error_content_model.py  error_message_model.py  file_content_model.py  file_message_model.py  form_content_model.py  form_message_model.py  message_model.py  text_content_model.py  text_message_model.py
a2a_domain/conversation/services/: __init__.py  check_continuation_service.py
a2a_domain/conversation/types/: __init__.py
a2a_domain/organization/models/: __init__.py  tenant_model.py  user_model.py
a2a_domain/shared/exceptions/: __init__.py  resource_already_exists_error.py
a2a_domain/shared/models/: __init__.py  event_model.py  field_model.py  file_model.py  form_model.py  paginated_result_model.py  structured_data_model.py
a2a_domain/shared/services/: __init__.py  count_resources_service.py  query_resources_service.py  retrieve_resource_service.py
a2a_domain/shared/types/: __init__.py
a2a_domain/shared/util/: __init__.py  helpers.py
secure_domain/conversation/models/: __init__.py  context_model.py  data_message_model.py  error_message_model.py  file_message_model.py  form_message_model.py  message_model.py
secure_domain/conversation/services/: __init__.py  check_continuation_service.py
secure_domain/conversation/types/: __init__.py
secure_domain/organization/models/: __init__.py  user_model.py
secure_domain/shared/exceptions/: __init__.py  resource_not_found_exception.py
secure_domain/shared/models/: __init__.py  event_model.py  field_model.py  file_model.py  form_model.py  resource_model.py  structured_data_model.py  tenant_model.py
secure_domain/shared/services/: __init__.py  count_resources_service.py  query_resources_service.py  retrieve_resource_service.py
secure_domain/shared/util/: __init__.py  helpers.py
shared/exceptions/: __init__.py
shared/models/: __init__.py  error_model.py  field_model.py  file_model.py  form_model.py  query_model.py  structured_data_model.py
shared/services/: __init__.py  count_resources_service.py  query_resources_service.py  retrieve_resource_service.py
shared/types/: __init__.py
shared/util/: __init__.py  helpers.py
